--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body style="background-color: #fbeef3a1">
+  <body style="background-color: rgba(0, 0, 0, 0.02);">
     <app-root></app-root>
 
     <script src="assets/ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
